--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -1,16 +1,16 @@
-<link rel="stylesheet" type="text/css" media="screen" href="static/css/Home.css" />
+<script></script>
+<link rel="stylesheet" href="static/css/Homepage.css">
 
-{{!-- HEADER --}}
+{{!------ ==== PAGE ==== ------}}
+
 {{> header }}
 
-{{!-- CONTENT --}}
-
-<div class="background">
-    <div class="title">
-        <p class="name">ENCO</p>
-        <p class="btn">Coming Soon</p>
+{{!-- START PAGE CONTENT --}}
+<section>
+    <div class="hero">
+        
     </div>
-</div>
+</section>
+{{!-- END PAGE CONTENT --}}
 
-{{!-- FOOTER --}}
 {{> footer }}
