--- a/homepage/layouts/main.hbs
+++ b/homepage/layouts/main.hbs
@@ -6,10 +6,9 @@
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#1c1c1c">
-    <link rel="stylesheet" type="text/css" media="screen" href="static/css/BaseStyle.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/css/Global.css" />
 </head>
 <body>
-    <noscript>Please turn on JavaScript to use this website.</noscript>
     {{{ body }}}
 </body>
 </html>
