--- a/homepage/layouts/main.hbs
+++ b/homepage/layouts/main.hbs
@@ -26,11 +26,10 @@
                         console.log('SR Tokens Verified');
                     }
                 }).catch((e)=>{
+                    console.log(e);
                     if (e==='CSR_TOKEN_INVALID') {
-                        alert(`Security Check Failed!
-                        You might be browsing a malicious site or might have clicked on a malicious link. 
-                        We recommend you go back or close this window!`);
-                        window.location = '/';
+                        alert(`Security Check Failed! You might be browsing a malicious site or might have clicked on a malicious link. We recommend you go back or close this window!`);
+                        // window.location = '/';
                     }
                 });
         })()
