--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -6,7 +6,13 @@
 {{!-- START PAGE CONTENT --}}
 <section>
     <div class="hero">
-        
+        <p>xtacy</p>
+
+        <button class="btn solid">Register</button>
+        <button class="btn">Read More</button>
+        <br>
+        {{!-- <button class="btn green">Click Me</button> --}}
+        {{!-- <button class="btn red">Click Me</button> --}}
     </div>
 </section>
 {{!-- END PAGE CONTENT --}}
