--- a/homepage/static/css/Homepage.css
+++ b/homepage/static/css/Homepage.css
@@ -1,37 +1,28 @@
-.background {
-    width: 100vw;
-    height: 100vh;
-    
-    background: linear-gradient(#720019, #002425);
-
+section {
+    height: 90vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    /* flex-flow: column; */
+    /* align-content: center; */
 }
 
-.title {
-    text-align: center;
-    margin: auto;
-    width: fit-content;
-    color: #fff;
-}
-
-.name {
-    font-size: 6em;
-    font-weight: 800;
-    margin: auto;
+.hero {
+    margin: auto auto;
+    font-size: 4em;
+    font-weight: 600;
+    display: block;
 }
 
 .btn {
-    outline: 2px solid #fff;
-    outline-offset: 10px;
-    width: fit-content;
-    margin: auto;
-    margin-top: 5em;
+    margin: 1em;
+    width: 10em;
+    height: 4em;
+    /* padding: 1em 2em; */
+    background-color: transparent;
+    border: 2px solid #000;
 }
 
-.h {
-    margin: 0 0 0 0.0625em;
-    height: 5rem;
+.solid {
+    color: #fff;
+    background-color: #000;
+    border: 2px solid #000;
 }
