--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -7,13 +7,11 @@
 <section>
     <div class="hero">
         <p>xtacy</p>
-
+        <div class="rotary-container"><div class="rotary"></div></div>
         <button class="btn solid">Register</button>
         <button class="btn">Read More</button>
-        <br>
-        {{!-- <button class="btn green">Click Me</button> --}}
-        {{!-- <button class="btn red">Click Me</button> --}}
     </div>
+
 </section>
 {{!-- END PAGE CONTENT --}}
 
