--- a/homepage/partials/header.hbs
+++ b/homepage/partials/header.hbs
@@ -1,1 +1,11 @@
-<header></header>
+<header>
+    <nav>
+        <ul>
+            <li><a href="/">home</a></li>
+            {{!-- <li><a href="/about"></a>about</li> --}}
+            <li><a href="/events">events</a></li>
+            <li><a href="/contact">contact</a></li>
+            <li class="highlight"><a href="/register">register</a></li>
+        </ul>
+    </nav>
+</header>
