--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -1,11 +1,13 @@
+<link rel="stylesheet" type="text/css" media="screen" href="./static/css/Events.css">
 {{!------ ==== PAGE ==== ------}}
 
 {{> header }}
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="hero">
-        
+    <div class="container">
+        <div class="banner"></div>
+        <div class="banner small"></div>
     </div>
 </section>
 {{!-- END PAGE CONTENT --}}
