--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" media="screen" href="static/css/Homepage.css">
+<link rel="stylesheet" type="text/css" media="screen" href="./static/css/Homepage.css">
 {{!------ ==== PAGE ==== ------}}
 
 {{> header }}
@@ -6,12 +6,27 @@
 {{!-- START PAGE CONTENT --}}
 <section>
     <div class="hero">
-        <p>xtacy</p>
-        <div class="rotary-container"><div class="rotary"></div></div>
-        <button class="btn solid">Register</button>
-        <button class="btn">Read More</button>
-    </div>
+        <h1>xtacy</h1>
+        <h2>xtacy</h2>
+        <h3>xtacy</h3>
+        <p class="justify">
+            Lorem ipsum ist dolor vala lorem ipsum isnt ist dolor vala isnt the lorem.<br>
+            Lorem ipsum ist dolor vala ist the lorem ist the.<br>
+            Lorem ipsum <em>ist dolor vala</em>
+        </p>
 
+        <div class="rotary"></div>
+
+        <button class="button solid">Register</button>
+        <button class="button">Read More</button>
+
+        <div class="compound-textbox">
+            <input type="text" placeholder="Composite">
+            <button class="button solid">SUBMIT</button>
+        </div>
+
+        <input class="textbox" type="text" placeholder="Textbox">
+    </div>
 </section>
 {{!-- END PAGE CONTENT --}}
 
