--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" media="screen" href="../static/css/Footer.css">
+
 <footer>
-    <p>Developed by NaMaK</p>
+    <p class="dev">Developed by NaMaK</p>
 </footer>
