--- a/homepage/register.hbs
+++ b/homepage/register.hbs
@@ -4,9 +4,8 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="hero">
-        
-    </div>
+    <div>
+    </div>    
 </section>
 {{!-- END PAGE CONTENT --}}
 
