--- a/homepage/layouts/main.hbs
+++ b/homepage/layouts/main.hbs
@@ -13,6 +13,9 @@
     {{!-- <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-firestore.js"></script> --}}
 
     <link rel="stylesheet" type="text/css" media="screen" href="../static/css/Global.css" />
+    <link rel="shortcut icon" type="image/png" href="../static/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="http://xtacy.org:3000/_file/GET/preset/cm9vdA/favicon/"/>
+
     <script src="../static/js/secu.js"></script>
     <script src="./static/js/database.js"></script>
     <script src="./static/js/config.js"></script>
