--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -5,8 +5,18 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="container">
-        <div class="banner"></div>
+    <div class="container banner-container">
+        <div class="banner"><img src="./static/img/thumb.jpg"></div>
+    </div>
+    <div class="container banner-container">
+        <div class="banner small"></div>
+        <div class="banner small"><img src="./static/img/favicon.png"></div>
+        <div class="banner small"></div>
+    </div>
+    <div class="container banner-container">
+        <div class="banner small"><img src="./static/img/thumb.jpg"></div>
+        <div class="banner small"></div>
+        <div class="banner small"></div>
         <div class="banner small"></div>
     </div>
 </section>
