--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -5,17 +5,19 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="hero">
+    <div class="hero container">
         <h1>xtacy</h1>
         <h2>xtacy</h2>
         <h3>xtacy</h3>
         <p class="justify">
             Lorem ipsum ist dolor vala lorem ipsum isnt ist dolor vala isnt the lorem.<br>
-            Lorem ipsum ist dolor vala ist the lorem ist the.<br>
+            Lorem ipsum ist dolor vala <span class="highlight">ist the lorem</span> ist the.<br>
             Lorem ipsum <em>ist dolor vala</em>
         </p>
 
-        <div class="rotary"></div>
+        <div class="home-rotor">
+            <div class="rotary"></div>
+        </div>
 
         <button class="button solid">Register</button>
         <button class="button">Read More</button>
