--- a/homepage/static/css/Events.css
+++ b/homepage/static/css/Events.css
@@ -1,13 +1,40 @@
+.banner-container {
+    flex-direction: column;
+} @media (min-width: 600px) {
+    .banner-container {
+        flex-direction: row;
+    }
+}
+
 .banner {
     position: relative;
-    width: 100%;
-    height: 16em;
-    /* padding: 5em; */
+    height: 20em;
     background-color: #000;
     margin: 1em;   
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+} .banner img {
+    image-rendering: crisp-edges;
+    max-height: 100%;
+    object-fit: cover;
+    transition: all 0.25s ease;
+} @media (min-width: 600px) {
+    .banner {
+        width: 100%;
+    }
+} .banner:hover img {
+    transform: scale(1.05);
+} .banner:active img {
+    opacity: 0.85;
 }
 
 .small[class~="banner"] {
-    width: 50%;
-    height: 12em;
+    height: 8em;
+}  @media (min-width: 600px) {
+    .small[class~="banner"] {
+        height: 12em;
+    }
 }
