--- a/homepage/static/css/Header.css
+++ b/homepage/static/css/Header.css
@@ -1,5 +1,6 @@
 header {
     width: 100%;
+    z-index: 5000;
 }
 header .container {
     flex-direction: row;
@@ -14,7 +15,7 @@ header .container {
     padding-right: 0.5em; 
     justify-self: center;
     align-self: flex-end;
-    z-index: 1000;
+    z-index: 11000;
 }
 .hamburger span,
 .hamburger span::before,
@@ -38,6 +39,11 @@ header .container {
     top: 7px;
 }
 
+#sidebar-toggle:checked ~ .hamburger {
+    position: fixed;
+    top: 1.85em;
+    right: 1em;
+}
 #sidebar-toggle:checked ~ .hamburger span::before {
 	bottom: 0;
 	transform: rotate(-45deg);
@@ -50,13 +56,14 @@ header .container {
 
 /* SIDEBAR MENU --------------------- */
 .sidebar {
-    position: absolute;
-    height: 100%;
+    position: fixed;
+    height: 100vh;
     width: 0;
     top: 0;
     right: 0;
     opacity: 0;
-    z-index: 100;
+    z-index: 10000;
+    max-width: 300px;
     /* background: linear-gradient(#ffe75c, #ffc05c); */
     background-color: #fff;
     transition: all 0.25s ease;
@@ -65,6 +72,7 @@ header .container {
     width: 60%;
 } 
 
+/* ACCENT */
 .sidebar .accent {
     position: absolute;
     width: 0;
@@ -74,7 +82,7 @@ header .container {
     z-index: -1;
     opacity: 0;
     background-color: rgb(255, 255, 0, 0.75);
-    transition: all 0.25s ease;
+    transition: all 0.75s ease;
 }  #sidebar-toggle:checked ~ .sidebar .accent {
     width: 3.25em;
     opacity: 1;
@@ -82,13 +90,17 @@ header .container {
 
 /* SIDEBAR SHADOW */
 .sidebar-shadow {
-    position: absolute;
+    position: fixed;
     display: none;
     opacity: 0;
     animation: show 0.25s ease reverse;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    /* bottom: 0;
+    right: 0;
+    left: 0; */
     margin: -1em;
+    z-index: 9000;
 } #sidebar-toggle:checked ~ .sidebar-shadow {
     display: block;
     opacity: 0.6;
@@ -149,7 +161,7 @@ header .sidebar-nav {
         justify-self: center;
         align-self: flex-end;
     } header .desktop-nav ul {
-        margin: 0 2em;
+        margin: 0 0 0 2em;
         font-size: 0.9em;
         list-style: none;
         float: right;
