--- a/homepage/static/css/Header.css
+++ b/homepage/static/css/Header.css
@@ -81,7 +81,7 @@ header .container {
     left: 0;
     z-index: -1;
     opacity: 0;
-    background-color: rgb(255, 255, 0, 0.75);
+    background-color: var(--yellow);
     transition: all 0.75s ease;
 }  #sidebar-toggle:checked ~ .sidebar .accent {
     width: 3.25em;
@@ -185,9 +185,13 @@ header ul li a {
     top: 50%;
     transition: all 250ms ease;
     background-color: #000;
-} @media (min-width:600px) {
+} @media (min-width:800px) {
     header a:hover::after {
         width: 100%;
+    }
+} @media (max-width:800px) {
+    header a::after {
+        display: none;
     }
 }
 
