--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -5,16 +5,39 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="container banner-container">
-        <div class="banner"><img src="./static/img/thumb.jpg"></div>
+    <div class="container">
+        <div class="event">
+            <div class="banner">
+                <a href="#">
+                    <img src="./static/img/thumb.jpg">
+                </a>
+            </div>
+
+            <h3>Event XYZ</h3>
+            <p class="left">Lorem ipsum ist dolor vala</p>
+        </div>
+
+        <div class="event">
+            <div class="banner">
+                <a href="#">
+                    <img class="mobile" src="./static/img/JMI Logo.png">
+                    <img class="desktop" src="./static/img/thumb.jpg">
+                </a>
+            </div>
+
+            <h3>Event ABCD</h3>
+            <p class="left">Lorem ipsum ist dolor vala</p>
+        </div>
     </div>
-    <div class="container banner-container">
-        <div class="banner small"></div>
-        <div class="banner small"><img src="./static/img/favicon.png"></div>
-        <div class="banner small"></div>
-    </div>
+    
+
     <div class="container banner-container">
         <div class="banner small"><img src="./static/img/thumb.jpg"></div>
+        <div class="banner small"><a href="#"><img src="./static/img/thumb.jpg"></a></div>
+        <div class="banner small"><img src="./static/img/thumb.jpg"></div>
+    </div>
+    <div class="container banner-container">
+        <div class="banner small"><a href="#"><img src="./static/img/thumb.jpg"></a></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
