--- a/homepage/static/css/Events.css
+++ b/homepage/static/css/Events.css
@@ -6,35 +6,85 @@
     }
 }
 
-.banner {
+.event {
     position: relative;
-    height: 20em;
-    background-color: #000;
-    margin: 1em;   
+    height: fit-content;
+    margin: 1em;
+    width: 100%;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     align-content: center;
     justify-content: center;
+} .event .banner {
+    margin-left: 0;
+    margin-right: 0;
+} @media (max-width: 600px) {
+    .event {
+        margin: 1em 0 1em 0;
+    }
+}
+
+.banner {
+    position: relative;
+    height: 24em;
+    background-color: #000;
+    margin: 1em 0 1em 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+} .banner a {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    /* Inherit parent layout for clickable banners */
+    overflow: inherit;
+    display: inherit;
+    flex-direction: inherit;
+    align-content: inherit;
+    justify-content: inherit;
 } .banner img {
-    image-rendering: crisp-edges;
     max-height: 100%;
     object-fit: cover;
     transition: all 0.25s ease;
-} @media (min-width: 600px) {
-    .banner {
-        width: 100%;
-    }
-} .banner:hover img {
-    transform: scale(1.05);
 } .banner:active img {
     opacity: 0.85;
+} @media (min-width: 600px) {
+    .banner {
+        background-color: #000;
+        width: 100%;
+        height: 20em;
+        margin: 1em;   
+    } .banner:hover img {
+        transform: scale(1.025);
+    }
 }
 
+/* Adaptive Banner Images */
+.banner img[class~="mobile"] {
+    display: block;
+} .banner img[class~="desktop"] {
+    display: none;
+} @media (min-width: 800px) {
+    .banner img[class~="mobile"] {
+        display: none;
+    } .banner img[class~="desktop"] {
+        display: block;
+    }
+}
+
+
+/* ======= Small Banners ======= */
+
 .small[class~="banner"] {
-    height: 8em;
+    height: 10em;
 }  @media (min-width: 600px) {
     .small[class~="banner"] {
         height: 12em;
     }
 }
+
+
