--- a/homepage/static/css/Global.css
+++ b/homepage/static/css/Global.css
@@ -14,7 +14,7 @@ body {
     text-align: center;
     display: flex;
     flex-direction: column;
-    animation: body 0.25s ease;
+    animation: body 0.5s ease;
 } @keyframes body {
     from { opacity: 0 }
     to { opacity: 1 }
@@ -66,7 +66,6 @@ h3 {
 p {
     font-size: 14px;
     font-weight: 400;
-    max-width: 50%;
     margin: auto;
     margin-block-start: 1em;
     margin-block-end: 1em;
@@ -76,7 +75,11 @@ p {
     text-align: right;
 } p[class~="justify"] {
     text-align: justify;
-} 
+} @media (min-width: 800px) {
+    p {
+        max-width: 50%;
+    }
+}
 
 /* Emphasis */
 em {
