--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -9,7 +9,7 @@
         <div class="event">
             <div class="banner">
                 <a href="#">
-                    <img src="./static/img/thumb.jpg">
+                    <img src="./static/img/thumb.png">
                 </a>
             </div>
 
@@ -21,7 +21,7 @@
             <div class="banner">
                 <a href="#">
                     <img class="mobile" src="./static/img/JMI Logo.png">
-                    <img class="desktop" src="./static/img/thumb.jpg">
+                    <img class="desktop" src="./static/img/thumb.png">
                 </a>
             </div>
 
@@ -32,12 +32,12 @@
     
 
     <div class="container banner-container">
-        <div class="banner small"><img src="./static/img/thumb.jpg"></div>
-        <div class="banner small"><a href="#"><img src="./static/img/thumb.jpg"></a></div>
-        <div class="banner small"><img src="./static/img/thumb.jpg"></div>
+        <div class="banner small"><img src="./static/img/thumb.png"></div>
+        <div class="banner small"><a href="#"><img src="./static/img/thumb.png"></a></div>
+        <div class="banner small"><img src="./static/img/thumb.png"></div>
     </div>
     <div class="container banner-container">
-        <div class="banner small"><a href="#"><img src="./static/img/thumb.jpg"></a></div>
+        <div class="banner small"><a href="#"><img src="./static/img/thumb.png"></a></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
