--- a/homepage/layouts/main.hbs
+++ b/homepage/layouts/main.hbs
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="../static/css/Global.css" />
     <link rel="shortcut icon" type="image/png" href="../static/img/favicon.png"/>
-    <link rel="shortcut icon" type="image/png" href="http://xtacy.org:3000/_file/GET/preset/cm9vdA/favicon/"/>
+    <link rel="shortcut icon" type="image/png" href="http://cdn.xtacy.org:3000/GET/preset/faviconpng/"/>
 
     <script src="../static/js/secu.js"></script>
     <script src="./static/js/database.js"></script>
