--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -1,5 +1,24 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../static/css/Footer.css">
 
 <footer>
-    <p class="dev">Developed by NaMaK</p>
+    <div class="container">
+        <div class="footer-links">
+            <div class="links">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/register">Register</a></li>
+                </ul>
+            </div>
+
+            <div class="faqs">
+                <ul>
+                    <li><a href="/">FAQs</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+        <p class="dev">Developed with 💛 by NAMAK</p>
+    </div>
 </footer>
