--- a/homepage/register.hbs
+++ b/homepage/register.hbs
@@ -5,7 +5,8 @@
 {{!-- START PAGE CONTENT --}}
 <section>
     <div>
-    </div>    
+        {{> loading }}
+    </div>
 </section>
 {{!-- END PAGE CONTENT --}}
 
