--- a/homepage/static/css/Global.css
+++ b/homepage/static/css/Global.css
@@ -14,7 +14,7 @@ body {
     text-align: center;
     display: flex;
     flex-direction: column;
-    animation: body 0.5s ease;
+    animation: body 750ms ease;
 } @keyframes body {
     from { opacity: 0 }
     to { opacity: 1 }
