--- a/homepage/contact.hbs
+++ b/homepage/contact.hbs
@@ -4,9 +4,25 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="hero">
-        
+    <div class="container center">
+        <h2>Contact</h2>
+
+        <div>
+            <input type="text" class="textbox" placeholder="Name">
+            <input type="text" class="textbox" placeholder="Email or Phone">
+            <input type="text" class="textbox" placeholder="Message">
+        </div>
+        <button class="button solid" id="login">Send</button>
     </div>
+
+    <p>Upon Contact
+        <ul>
+            <li>Send email to us about it</li>
+            <li>Send email to them about it</li>
+            <li>Add them to mailing list</li>
+            <li>Maybe send promotional stuff</li>
+        </ul>
+    </p>
 </section>
 {{!-- END PAGE CONTENT --}}
 
