--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -5,7 +5,7 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="container">
+    <div class="banner-container">
         <div class="event">
             <div class="banner">
                 <a href="#">
@@ -31,12 +31,12 @@
     </div>
     
 
-    <div class="container banner-container">
+    <div class="banner-container">
         <div class="banner small"><img src="./static/img/thumb.png"></div>
         <div class="banner small"><a href="#"><img src="./static/img/thumb.png"></a></div>
         <div class="banner small"><img src="./static/img/thumb.png"></div>
     </div>
-    <div class="container banner-container">
+    <div class="banner-container">
         <div class="banner small"><a href="#"><img src="./static/img/thumb.png"></a></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
