--- a/homepage/terms.hbs
+++ b/homepage/terms.hbs
@@ -14,10 +14,10 @@
         <h3>GENERAL RULES</h3>
     </div>
     <div>
-        <p class="justify">Entry to the premises of Jamia Millia Islamia will only be granted after checking the participant's gatepass and your fee receipt. 
+        <p class="justify">Entry to the premises of Jamia Millia Islamia will only be granted after checking your registration and ID. 
         Please carry a valid college/school ID or a government issued photo identity proof with you for verification.</p>
 
-        <p class="justify">Please cooperate with the staff as well as Jamia Millia Islamia’s security personel. Misbehavior with JMIMUN staff or Jamia Millia Islamia’s 
+        <p class="justify">Please cooperate with the staff as well as Jamia Millia Islamia’s security personel. Misbehavior with the staff or Jamia Millia Islamia’s 
         security staff will result in a penalty, cancellation of participation, eviction from premises of the University or all of these.</p>
 
         <p class="justify">Forging a ticket and/or payment receipt is an offense and will entail criminal prosecution.</p>
@@ -27,7 +27,7 @@
         inside the gates of the University.</p>
 
         <p class="justify">Please take care of your belongings like jewelry, electronics, cash etc., as you yourself are responsible for them. We suggest that you should 
-        not carry more items of value than you can effectively handle. Jamia Millia Islamia and the JMIMUN staff are not responsible for any personal 
+        not carry more items of value than you can effectively handle. Jamia Millia Islamia and the staff are not responsible for any personal 
         items and will not be liable to cover any losses incurred by the misplacement of said items under any circumstances.</p>
 
         <p class="justify">The organizers reserve the right to evict from the premises of the University and/or cancel the participation of any delegate or participant 
@@ -46,7 +46,7 @@
         <h3>REFUND POLICY</h3>
     </div>
     <div>
-        <p class="justify">The delegate fee for any allotted delegate is non-refundable once the payment has been made. In very rare circumstances, the Secretariat 
+        <p class="justify">// REDO The delegate fee for any allotted delegate is non-refundable once the payment has been made. In very rare circumstances, the Secretariat 
         may decide to refund the delegate fee for a delegate who is able to present genuine reasons for cancellation of their participation 
         and their need for a refund.</p>
     </div>
