--- a/homepage/about.hbs
+++ b/homepage/about.hbs
@@ -4,8 +4,25 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="hero">
-        
+    <div>
+        <p>
+            Xtacy is a three day festival, jointly brought together by IEEE JMI and ‘Some organisation’, aimed at celebrating student culture. 
+            It is a blend of technical and cultural events that builds a healthy competitive environment and at the same time provides students 
+            with a space to alleviate academic stress.
+            Along with giving students a diverse platform to put forth their talents and display their relevant skills, Xtacy aims towards creating a holistic 
+            experience that stays with the students forever. It is the cohesion of technical and cultural backgrounds, a movement that binds the two opposite 
+            ends of the spectrum into one unified whole that hits the balance that is required for a techno-cultural fest. 
+            It is the heterogenous nature of this three day celebration that exposes the students to an assortment of activities that guarantee social and 
+            academic inclusion of one and all. The fest will draw audiences and participants from all around the region and will host an array of events that 
+            broadens their minds and imparts mental stimulation and contributes in the cognitive progress of the bright minds of today's youth.
+            Xtacy aims towards the cerebral expansion of the students along with keeping their festive spirits alive. It is crucial for them to follow different 
+            directions that inspire them to seek new targets as both students and independent citizens in the society. 
+            The variety of technical events conducted under Xtacy give students a chance to endeavour different paths in technology and discover their interests. 
+            On the other hand, cultural events enrich the students’ understanding of heritage. It also explores today’s art form that creates the cultural heritage 
+            of tomorrow. The festival will be honoured by distinguished personalities from the art community and renowned leaders of technology who are stellar 
+            exemplars of their respective discipline.
+            The first edition of Xtacy will be held at Jamia Millia Islamia, in New Delhi on March 2019.
+        </p>
     </div>
 </section>
 {{!-- END PAGE CONTENT --}}
