--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -31,7 +31,7 @@
         <input class="textbox" type="text" placeholder="Textbox">
     </div>
 
-    <div class="container">
+    <div class="container horizontal">
         {{!-- <div class="banner"></div> --}}
         {{!-- <h1>xtacy</h1> --}}
         <div class="banner"></div>
@@ -45,8 +45,10 @@
             Sed interdum vehicula urna. Morbi suscipit accumsan finibus. Sed sed est et dui bibendum consectetur in vel purus. 
             Quisque dignissim nisl lacus, ut convallis est luctus nec.
         </p>
+    </div>
 
-        {{!-- <p class="justify">
+    <div class="container">
+        <p class="justify">
             Mauris tincidunt mauris quis leo consectetur egestas. Nam quis nibh in mauris tristique pretium. 
             Sed at cursus diam, sit amet maximus orci. Etiam at diam at leo finibus tincidunt. Nunc mollis 
             tincidunt lectus. Maecenas placerat purus dapibus mauris rutrum, quis commodo erat porta. 
@@ -54,10 +56,10 @@
             Etiam a dictum justo. Aliquam eu efficitur tellus. Curabitur facilisis purus non velit tincidunt semper. 
             Sed interdum vehicula urna. Morbi suscipit accumsan finibus. Sed sed est et dui bibendum consectetur in vel purus. 
             Quisque dignissim nisl lacus, ut convallis est luctus nec.
-        </p> --}}
+        </p>
     </div>
 
-    <div class="container">
+    <div class="container horizontal">
         <div class="banner"></div>
     </div>
 </section>
