--- a/homepage/register.hbs
+++ b/homepage/register.hbs
@@ -7,12 +7,15 @@
     <div class="container center">
         {{> loading }}
 
-        <h2>Register</h2>
-
-        <input type="text" class="textbox" placeholder="Name">
-        <input type="text" class="textbox" placeholder="Email or Phone">
-        <input type="password" class="textbox" placeholder="Password">
-        <button class="button solid" id="login">Register</button>
+        <h2>Login</h2>
+        <form action="#">
+            <div class="container center">
+                {{!-- <input id="name" type="text" class="textbox" placeholder="Name" autocomplete="given-name"> --}}
+                <input id="email" type="text" class="textbox" placeholder="Email or Phone" autocomplete="email">
+                <input id="password" type="password" class="textbox" placeholder="Password" autocomplete="current-password">
+                <button class="button solid" id="login">Register</button>
+            </div>
+        </form>
 
         <p>Or continue with</p>
         <div>
@@ -24,9 +27,3 @@
 {{!-- END PAGE CONTENT --}}
 
 {{> footer }}
-
-<script>
-    document.getElementById("login").onclick = () => {
-        $(document.getElementById("loading")).addClass('fadeout');
-    }
-</script>
