Events page drawer

--- a/bookings/src/Global.css
+++ b/bookings/src/Global.css
@@ -39,9 +39,18 @@ section {
     position: relative;
 } .container[class~="horizontal"] {
     flex-direction: row;
+} @media(max-width: 600px) {
+    .container[class~="horizontal"] {
+        flex-direction: column;
+    }
 } .container[class~="center"] * {
     margin-left: auto;
     margin-right: auto;
+} .container[class~="fit"] {
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    max-width: 1200px;
 }
 
 /* TYPOGRAPHY ========================================= TYPOGRAPHY  */
@@ -79,9 +88,12 @@ p {
     text-align: right;
 } p[class~="justify"] {
     text-align: justify;
-} @media (min-width: 800px) {
+} @media (min-width: 600px) {
     p {
         max-width: 50%;
+    } p[class~="wide"] {
+        width: auto;
+        max-width: 90%;
     }
 }
 
