--- a/homepage/contact.hbs
+++ b/homepage/contact.hbs
@@ -4,25 +4,25 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="container center">
+    <div class="container fit">
         <h2>Contact</h2>
 
-        <div>
+        <div class="container center">
             <input type="text" class="textbox" placeholder="Name">
             <input type="text" class="textbox" placeholder="Email or Phone">
             <input type="text" class="textbox" placeholder="Message">
+            <button class="button solid" id="login">Send</button>
         </div>
-        <button class="button solid" id="login">Send</button>
-    </div>
 
-    <p>Upon Contact
-        <ul>
-            <li>Send email to us about it</li>
-            <li>Send email to them about it</li>
-            <li>Add them to mailing list</li>
-            <li>Maybe send promotional stuff</li>
-        </ul>
-    </p>
+        <p>Upon Contact
+            <ul>
+                <li>Send email to us about it</li>
+                <li>Send email to them about it</li>
+                <li>Add them to mailing list</li>
+                <li>Maybe send promotional stuff</li>
+            </ul>
+        </p>
+    </div>
 </section>
 {{!-- END PAGE CONTENT --}}
 
