--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -8,7 +8,7 @@
     <div class="banner-container">
         <div class="event">
             <div class="banner">
-                <a href="#">
+                <a href="#1">
                     <img src="./static/img/thumb.png">
                 </a>
             </div>
@@ -19,7 +19,7 @@
 
         <div class="event">
             <div class="banner">
-                <a href="#">
+                <a href="#2">
                     <img class="mobile" src="./static/img/JMI Logo.png">
                     <img class="desktop" src="./static/img/thumb.png">
                 </a>
@@ -30,19 +30,80 @@
         </div>
     </div>
     
-
     <div class="banner-container">
         <div class="banner small"><img src="./static/img/thumb.png"></div>
-        <div class="banner small"><a href="#"><img src="./static/img/thumb.png"></a></div>
+        <div class="banner small"><a href="#3"><img src="./static/img/thumb.png"></a></div>
         <div class="banner small"><img src="./static/img/thumb.png"></div>
     </div>
     <div class="banner-container">
-        <div class="banner small"><a href="#"><img src="./static/img/thumb.png"></a></div>
+        <div class="banner small"><a href="#4"><img src="./static/img/thumb.png"></a></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
     </div>
 </section>
+
+{{!-- EVENT PROMO DRAWER --}}
+
+<input type="checkbox" id="drawer-toggle" hidden="true">
+<section class="drawer">
+    <div class="container">
+        <div class="container"><label for="drawer-toggle" class="close"><span></span></label></div>
+
+        <div class="container drawer-content">
+            <div class="strip"></div>
+            {{> loading }}
+            <iframe src="" frameborder="0" id="drawer-event"></iframe>
+        </div>
+    </div>
+</section>
+<section class="drawer-shadow"></section>
 {{!-- END PAGE CONTENT --}}
+
+<script>
+    let banners = document.getElementsByClassName("banner");
+    let iframe = document.getElementById("drawer-event");
+    let loading = document.getElementById("loading");
+    let toggle = document.getElementById("drawer-toggle");
+
+    for(let i=0; i<banners.length; i++) {
+        banners[i].onclick = () => {
+            toggle.checked = true;
+            setEventUrl();
+        }
+    }
+
+    function setEventUrl() {
+        setTimeout(function(){
+            if (toggle.checked===true) {
+                let url = window.location.href.split('#')[1];
+                if (url!==undefined) iframe.src = '/' + url;
+            }
+        }, 1000);
+    }
+
+    window.onload = () => {
+        let url = window.location.href.split('#')[1];
+        if (url!==undefined) {
+            toggle.checked = true;
+            setEventUrl();
+        }
+    }
+
+    toggle.onchange = () => {
+        if (toggle.checked===false) {
+            iframe.src = '';
+            window.history.pushState({ "Title" : "EVENTS" , "Url" : "/events"}, "EVENTS", "/events");
+        }
+    }
+
+    iframe.onload = () => {
+        $(iframe).removeClass("disappear");
+        $(iframe).addClass("appear");
+
+        $(loading).removeClass("appear");
+        $(loading).addClass("disappear");
+    }
+</script>
 
 {{> footer }}
