--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -34,7 +34,7 @@
     <div class="container horizontal">
         {{!-- <div class="banner"></div> --}}
         {{!-- <h1>xtacy</h1> --}}
-        <div class="banner"></div>
+        <div class="banner"><img src="./static/img/thumb.png" alt=""></div>
 
         <p class="justify">
             Mauris tincidunt mauris quis leo consectetur egestas. Nam quis nibh in mauris tristique pretium. 
@@ -48,7 +48,7 @@
     </div>
 
     <div class="container">
-        <p class="justify">
+        <p class="justify wide">
             Mauris tincidunt mauris quis leo consectetur egestas. Nam quis nibh in mauris tristique pretium. 
             Sed at cursus diam, sit amet maximus orci. Etiam at diam at leo finibus tincidunt. Nunc mollis 
             tincidunt lectus. Maecenas placerat purus dapibus mauris rutrum, quis commodo erat porta. 
@@ -59,8 +59,20 @@
         </p>
     </div>
 
-    <div class="container horizontal">
+    <div class="container">
         <div class="banner"></div>
+        <div class="container horizontal fit">
+            <button class="button solid">READ</button>
+            <p class="justify wide">
+                Mauris tincidunt mauris quis leo consectetur egestas. Nam quis nibh in mauris tristique pretium. 
+                Sed at cursus diam, sit amet maximus orci. Etiam at diam at leo finibus tincidunt. Nunc mollis 
+                tincidunt lectus. Maecenas placerat <span class="highlight">purus dapibus mauris rutrum, quis commodo erat porta. 
+                Aliquam erat volutpat. Ut finibus erat eget dapibus ultricies. Ut sit amet justo in leo viverra gravida. 
+                Etiam a dictum justo. Aliquam eu efficitur tellus.</span> Curabitur facilisis purus non velit tincidunt semper. 
+                Sed interdum vehicula urna. Morbi suscipit accumsan finibus. Sed sed est et dui bibendum consectetur in vel purus. 
+                Quisque dignissim nisl lacus, ut convallis est luctus nec.
+            </p>
+        </div>
     </div>
 </section>
 {{!-- END PAGE CONTENT --}}
