--- a/homepage/static/css/Events.css
+++ b/homepage/static/css/Events.css
@@ -33,6 +33,7 @@
 
 .banner {
     position: relative;
+    width: 100%;
     height: 24em;
     background-color: #000;
     margin: 1em 0 1em 0;
@@ -60,10 +61,8 @@
     opacity: 0.85;
 } @media (min-width: 600px) {
     .banner {
-        background-color: #000;
-        width: 100%;
         height: 20em;
-        margin: 1em;   
+        margin: 1em;
     } .banner:hover img {
         transform: scale(1.025);
     }
@@ -93,4 +92,127 @@
     }
 }
 
+/* ============================ EVENT PROMO DRAWER ============================ */
 
+.drawer {
+    position: fixed;
+    height: 0;
+    width: 100vw;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    z-index: 12000;
+    background-color: #fff;
+    padding: 2em;
+    transition: all 0.75s ease;
+} #drawer-toggle:checked ~ .drawer {
+    opacity: 1;
+    height: 100vh;
+}
+.drawer .container {
+    padding: 0;
+}
+
+/* DRAWER SHADOW */
+.drawer-shadow {
+    position: fixed;
+    display: none;
+    opacity: 0;
+    animation: show 0.25s ease reverse;
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
+} #drawer-toggle:checked ~ .drawer-shadow {
+    display: block;
+    opacity: 0.6;
+    background-color: #000;
+    animation: drawerShadow 1s ease;
+} @keyframes drawerShadow {
+    from { opacity: 0 } to { opacity: 0.6 }
+}
+
+/* === Close Button === */
+
+.drawer .close {
+    position: relative;
+    display: block;
+    margin: auto 0 auto auto;
+    height: 100%;
+    padding: 1em;
+    padding-right: 0.5em; 
+    justify-self: center;
+    align-self: flex-end;
+    z-index: 11000;
+}
+.drawer .close span,
+.drawer .close span::before,
+.drawer .close span::after {
+    display: block;
+    position: relative;
+    background: #000;
+    height: 2px;
+    width: 25px;
+    transition: all 0.25s ease;
+}
+.drawer .close span::before,
+.drawer .close span::after {
+    content: '';
+    position: absolute;
+}
+.drawer .close span::before {
+	bottom: 0;
+	transform: rotate(-45deg);
+}
+.drawer .close span::after {
+	top: 0;
+	transform: rotate(45deg);
+}
+.drawer .close span {
+	background: transparent;
+}
+
+/* ----------------- DRAWER CONTENT ----------------- */
+
+.drawer-content {
+    height: 75vh;
+    position: relative;
+    margin-top: 2em;
+}
+.drawer-content * {
+    margin-top: auto;
+    margin-bottom: auto;
+    transition: all 0.25s ease;
+}
+.drawer-content iframe {
+    height: 100%;
+    display: none;
+}
+.drawer .drawer-content .loading {
+    animation-delay: 0ms;
+}
+
+.appear {
+    display: block !important; 
+    animation: fade-content 0.25s ease;
+}
+.disappear { 
+    display: none !important;
+    animation: fade-content 0.25s ease reverse;
+}
+@keyframes fade-content {
+    from { opacity: 0 } to { opacity: 1 }
+}
+
+.drawer-content .strip {
+    position: absolute;
+    width: 1.125em;
+    height: 100%;
+    right: 0;
+    top: 0;
+    background-color: #fff;
+    z-index: 15000;
+} @media (max-width: 600px) {
+    .drawer-content .strip {
+        display: none;
+    }
+}
