Awesome events setup

--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -1,5 +1,5 @@
-<link rel="stylesheet" type="text/css" media="screen" href="./static/css/Homepage.css">
-<link rel="stylesheet" type="text/css" media="screen" href="./static/css/Events.css">
+<link rel="stylesheet" type="text/css" media="screen" href="/static/css/Homepage.css">
+<link rel="stylesheet" type="text/css" media="screen" href="/static/css/Events.css">
 {{!------ ==== PAGE ==== ------}}
 
 {{> header }}
@@ -34,7 +34,7 @@
     <div class="container horizontal">
         {{!-- <div class="banner"></div> --}}
         {{!-- <h1>xtacy</h1> --}}
-        <div class="banner"><img src="./static/img/thumb.png" alt=""></div>
+        <div class="banner"><img src="/static/img/thumb.png" alt=""></div>
 
         <p class="justify">
             Mauris tincidunt mauris quis leo consectetur egestas. Nam quis nibh in mauris tristique pretium. 
