--- a/homepage/partials/loading.hbs
+++ b/homepage/partials/loading.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" media="screen" href="../static/css/Loading.css">
+<link rel="stylesheet" type="text/css" media="screen" href="/static/css/Loading.css">
 
 <div class="loading" id="loading">
     <div class="loading-rotary">
