--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" media="screen" href="./static/css/Events.css">
+<link rel="stylesheet" type="text/css" media="screen" href="/static/css/Events.css">
 {{!------ ==== PAGE ==== ------}}
 
 {{> header }}
@@ -8,8 +8,8 @@
     <div class="banner-container">
         <div class="event">
             <div class="banner">
-                <a href="#1">
-                    <img src="./static/img/thumb.png">
+                <a href="#hackrp">
+                    <img src="/static/img/thumb.png">
                 </a>
             </div>
 
@@ -19,9 +19,9 @@
 
         <div class="event">
             <div class="banner">
-                <a href="#2">
-                    <img class="mobile" src="./static/img/JMI Logo.png">
-                    <img class="desktop" src="./static/img/thumb.png">
+                <a href="#hackrp">
+                    <img class="mobile" src="/static/img/JMI Logo.png">
+                    <img class="desktop" src="/static/img/thumb.png">
                 </a>
             </div>
 
@@ -31,12 +31,12 @@
     </div>
     
     <div class="banner-container">
-        <div class="banner small"><img src="./static/img/thumb.png"></div>
-        <div class="banner small"><a href="#3"><img src="./static/img/thumb.png"></a></div>
-        <div class="banner small"><img src="./static/img/thumb.png"></div>
+        <div class="banner small"><img src="/static/img/thumb.png"></div>
+        <div class="banner small"><a href="#hackrp"><img src="/static/img/thumb.png"></a></div>
+        <div class="banner small"><img src="/static/img/thumb.png"></div>
     </div>
     <div class="banner-container">
-        <div class="banner small"><a href="#4"><img src="./static/img/thumb.png"></a></div>
+        <div class="banner small"><a href="#hackrp"><img src="/static/img/thumb.png"></a></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
@@ -77,7 +77,7 @@
         setTimeout(function(){
             if (toggle.checked===true) {
                 let url = window.location.href.split('#')[1];
-                if (url!==undefined) iframe.src = '/' + url;
+                if (url!==undefined) iframe.src = '/event/' + url + '/promo';
             }
         }, 1000);
     }
