--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" media="screen" href="../static/css/Footer.css">
+<link rel="stylesheet" type="text/css" media="screen" href="/static/css/Footer.css">
 
 <footer>
     <div class="container">
