--- a/homepage/partials/header.hbs
+++ b/homepage/partials/header.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" media="screen" href="../static/css/Header.css">
+<link rel="stylesheet" type="text/css" media="screen" href="/static/css/Header.css">
 
 <header>
     <div class="container">
