--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -19,6 +19,9 @@
                 </ul>
             </div>
         </div>
+
+        <div class="images"><img src="/static/img/Logo-Inverse.png" alt=""></div>
+
         <p class="dev">Developed with 💛 by NAMAK</p>
     </div>
 </footer>
