--- a/homepage/eventPromoTemplate.hbs
+++ b/homepage/eventPromoTemplate.hbs
@@ -1,21 +1,31 @@
 <link rel="stylesheet" type="text/css" media="screen" href="/static/css/Events.css">
+<link rel="stylesheet" type="text/css" media="screen" href="/static/css/PromoStyle.css">
 {{!------ ==== PAGE ==== ------}}
+
+<script>
+    var __data;
+    window.onload = () => {
+        __data = document.getElementById("__data").innerHTML;
+    }
+</script>
 
 {{!-- START PAGE CONTENT --}}
 <section>
     {{#with page}}
-        <div class="container">
-            <div class="banner-container">
-                <div class="banner"><a href="">
-                    <img src="/static/img/thumb.png" alt="">
-                </a></div>
-            </div>
+        <article class="promo">
+            <div class="container">
+                <div class="banner small">
+                    <a href="#">
+                        <img class="desktop" src="/static/img/thumb.png" alt="">
+                        <img class="mobile" src="/static/img/JMI Logo.png" alt="">
+                    </a>
+                </div>
 
-            <div class="container horizontal">
-                <button class="button">REGISTER</button>
-                <p class="justify">{{ content }}</p>
+                <div class="content">{{{ content }}}</div>
             </div>
-        </div>
+        </article>
+
+        <div id="__data" hidden="true">{{ data }}</div>
     {{/with}}
 </section>
 {{!-- END PAGE CONTENT --}}
