--- a/bookings/src/Global.css
+++ b/bookings/src/Global.css
@@ -21,6 +21,9 @@ body {
     from { opacity: 0 }
     to { opacity: 1 }
 }
+::-moz-selection, ::selection {
+    background-color: var(--yellow)
+}
 
 section {
     padding: 1em;
