--- a/homepage/static/css/Global.css
+++ b/homepage/static/css/Global.css
@@ -21,6 +21,9 @@ body {
     from { opacity: 0 }
     to { opacity: 1 }
 }
+::-moz-selection, ::selection {
+    background: var(--yellow);
+}
 
 section {
     padding: 1em;
