--- a/homepage/eventPromoTemplate.hbs
+++ b/homepage/eventPromoTemplate.hbs
@@ -21,6 +21,8 @@
                     </a>
                 </div>
 
+                <div id="metadata" class="metadata">heelo this is meta data</div>
+
                 <div class="content">{{{ content }}}</div>
             </div>
         </article>
