--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -57,8 +57,6 @@
             <div class="action" id="action">
                 <button id="button_main" class="button solid">REGISTER</button>
                 <button id="button_aux" class="button">READ MORE</button>
-                
-                <div id="metadata" class="metadata">heelo this is meta data</div>
             </div>
         </div>
     </div>
@@ -86,6 +84,10 @@
                 let url = window.location.href.split('#')[1];
                 if (url!==undefined) iframe.src = '/event/' + url + '/promo';
 
+                document.getElementById("button_main").onclick = () => {
+                    window.location = '/event/' + url;
+                    // window.location = '/register/start?int=' + gen + '&evt=' + url;
+                }
                 document.getElementById("button_aux").onclick = () => {
                     window.location = '/event/' + url;
                 }
