--- a/homepage/static/css/Events.css
+++ b/homepage/static/css/Events.css
@@ -224,29 +224,12 @@
     max-width: 600px;
     display: grid;
     grid-template-columns: minmax(4em, 12em)  minmax(4em, 12em);
-    grid-template-rows: 1fr auto;
+    grid-template-rows: 1fr;
     grid-auto-flow: row;
     grid-gap: 1em;
     animation: fade-action 0.25s ease 1s;
 } @keyframes fade-action {
     from { opacity: 0 } to { opacity: 1 }
-}
-.drawer-content .action .metadata {
-    height: fit-content;
-    grid-column: 1/3;
-    grid-row: 2/3;
-    font-size: 0.75em;
-    color: #777;
-    text-align: left;
-}
-
-.drawer-content .action .metadata {
-    height: fit-content;
-    grid-column: 1/3;
-    grid-row: 2/3;
-    font-size: 0.75em;
-    color: #777;
-    text-align: left;
 }
 
 .drawer-content .action * {
